test/files/neg/t2386.scala
object Test {
  val a = Array(Array(1, 2), Array("a","b"))
}
