test/files/neg/t2386.check
t2386.scala:2: error: could not find implicit value for evidence parameter of type scala.reflect.ClassManifest[Array[_ >: java.lang.String with Int]]
  val a = Array(Array(1, 2), Array("a","b"))
               ^
one error found
